--- a/app/views/blogs/list.html.erb
+++ b/app/views/blogs/list.html.erb
@@ -1,4 +1,5 @@
-<a href="/blogs/edit"><button type="button" >New</button></a> <br/>
+<a href="/blogs/new"><button type="button" >New</button></a> <br/>
+
 <% @latest_blogs.each do |each_blog|%>
     <list>
      <span>test</span> <a href="/blogs/<%= each_blog.id%>/view"> <%= each_blog.title%><br /></a>
